--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ h1{
     font-size: 35px;
     font-weight: 700;
   }
+
+legend{
+    font-size: 20px;
+}  
   
 ul{
     display: flex;
@@ -48,8 +52,12 @@ ul{
     margin-bottom: 20px;
 }
 
-span{
+.emphasize{
     font-weight: 700;
+}
+
+fieldset{
+    border: none;
 }
 
 .button-container{
@@ -77,6 +85,46 @@ button:active {
     transition: background 0.1s;
   }
 
-  .hidden {
+.hidden {
     display: none;
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+  }
+  
+  .popup {
+    line-height: 28px;
+    background-color: white;
+    margin: 0 auto;
+    padding: 30px;
+    width: 90%;
+    max-width: 700px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /*border: 12px double #999;*/
+  }
+  
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 50px;
+    color: #4ec5dfc2;
+    text-decoration: none;
+  }
+  
+  .popup-gif {
+    margin: 0 auto;
+    max-height: 100%;
+    max-width: 100%;
+  }
+  
