--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body{
     margin-right: auto;
     margin-top: 20px;
     margin-bottom: 20px;
+    padding: 5px;
   }
  main{
     display: flex;
